fix: minor modifications on mobile

--- a/style/services.scss
+++ b/style/services.scss
@@ -143,6 +143,7 @@
 
 @media only screen and (max-width: 480px) {
     .services {
+        height: 90vh;
         &__title {
             font-size: 16px;
         }
@@ -154,6 +155,9 @@
             font-size: 16px;
             line-height: 24px;
             margin-bottom: 16px;
+        }
+        .services-swiper {
+            height: 90vh;
         }
         .swiper-wrapper {
             position: relative;
