--- a/style/style.css
+++ b/style/style.css
@@ -353,7 +353,7 @@
 }
 @media only screen and (max-width: 480px) {
   .hero {
-    padding: 124px 3.55%;
+    padding: 90px 3.55%;
   }
   .hero__title {
     font-size: 32px;
@@ -647,6 +647,9 @@
   }
 }
 @media only screen and (max-width: 480px) {
+  .services {
+    height: 90vh;
+  }
   .services__title {
     font-size: 16px;
   }
@@ -658,6 +661,9 @@
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 16px;
+  }
+  .services .services-swiper {
+    height: 90vh;
   }
   .services .swiper-wrapper {
     position: relative;
